// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseLayout /> Should math stored snapshot 1`] = `
.c5 {
  width: 100px;
}

.c1 {
  max-width: 100vw;
  width: 100%;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-bottom: 1px solid;
}

.c2 {
  display: none;
}

.c3 {
  width: 6px;
}

.c0 {
  max-width: 100vw;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (max-width:550px) {
  .c1 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c1 > .c4 {
    position: absolute;
  }
}

@media screen and (max-width:550px) {
  .c2 {
    display: block;
    margin-right: auto;
    display: block;
    width: 40px;
    height: 40px;
    padding: 8px;
  }
}

<BaseLayout>
  <styled.div>
    <div
      className="c0"
    >
      <Header>
        <styled.header>
          <header
            className="c1"
          >
            <styled.button>
              <button
                className="c2"
              >
                <styled.img
                  src="test-file-stub"
                >
                  <img
                    className="c3"
                    src="test-file-stub"
                  />
                </styled.img>
              </button>
            </styled.button>
            <Logo>
              <styled.img
                src="test-file-stub"
              >
                <img
                  className="c4 c5"
                  src="test-file-stub"
                />
              </styled.img>
            </Logo>
          </header>
        </styled.header>
      </Header>
      <h1>
        Test
      </h1>
    </div>
  </styled.div>
</BaseLayout>
`;

exports[`<BaseLayout /> Should math stored snapshot 2`] = `
.c5 {
  width: 100px;
}

.c1 {
  max-width: 100vw;
  width: 100%;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-bottom: 1px solid;
}

.c2 {
  display: none;
}

.c3 {
  width: 6px;
}

.c0 {
  max-width: 100vw;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (max-width:550px) {
  .c1 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c1 > .c4 {
    position: absolute;
  }
}

@media screen and (max-width:550px) {
  .c2 {
    display: block;
    margin-right: auto;
    display: block;
    width: 40px;
    height: 40px;
    padding: 8px;
  }
}

<BaseLayout>
  <styled.div>
    <div
      className="c0"
    >
      <Header>
        <styled.header>
          <header
            className="c1"
          >
            <styled.button>
              <button
                className="c2"
              >
                <styled.img
                  src="test-file-stub"
                >
                  <img
                    className="c3"
                    src="test-file-stub"
                  />
                </styled.img>
              </button>
            </styled.button>
            <Logo>
              <styled.img
                src="test-file-stub"
              >
                <img
                  className="c4 c5"
                  src="test-file-stub"
                />
              </styled.img>
            </Logo>
          </header>
        </styled.header>
      </Header>
    </div>
  </styled.div>
</BaseLayout>
`;
